SERVER-18246 getmore on secondary in recovery mode can crash mongos