src/mongo/db/repl/oplogreader.cpp
@@ -91,7 +91,6 @@ namespace repl {
         if (conn() == NULL || _host != host) {
             resetConnection();
             _conn = shared_ptr<DBClientConnection>(new DBClientConnection(false,
-                                                                          0,
                                                                           tcp_timeout));
             string errmsg;
             if ( !_conn->connect(host, errmsg) ||
