src/mongo/db/repl/scoped_conn.cpp
@@ -49,7 +49,6 @@ namespace repl {
 
     ScopedConn::ConnectionInfo::ConnectionInfo() : lock("ConnectionInfo"),
                     cc(new DBClientConnection(/*reconnect*/ true,
-                                              /*replicaSet*/ 0,
                                               /*timeout*/ DEFAULT_HEARTBEAT_TIMEOUT_SECS)),
                     connected(false) {
                     cc->_logLevel = logger::LogSeverity::Debug(2);
